# baseball-analytics

./: .gitignore  README.md  dev.ps1  package-lock.json  package.json  pnpm-lock.yaml
backend/: .env.example  package-lock.json  package.json
backend/data/: calibration.json  dixon-coles.json  fitted-weights.json
backend/scripts/: analyze-france-morocco.mjs  audit-fb-bb-models.mjs  audit-mlb-algo.mjs  audit-parlay-slate.mjs  audit-tonight.mjs  auditMlbExpectedRuns.mjs  auditMlbPitDataset.mjs  backfill-bet-strategy.mjs  backfillMlbOfficialHistory.mjs  backtest-mlb-h2h-jul9.mjs  backtest-stake-jul10.mjs  backtest-stake-jul9.mjs  buildMlbBaseline.mjs  check-current-parlay.mjs  check-kbo-live.mjs  diagnose-live.mjs  diagnose-lottery.mjs  importCollectorSnapshots.mjs  inspectTop1Walkforward.mjs  postmortem-fra-esp.mjs  probe-kbo-live-api.mjs  probe-npb-scores.mjs  probe-upcoming-sports.mjs  rankTonightExpectedRuns.mjs  refresh-and-audit.mjs  simulate-yesterday.mjs  test-multi-picks.mjs  test-yahoo-npb.mjs
backend/src/: config.js  index.js
backend/test/: baseball-elo.test.js  external-prematch-import.test.js  flat-bet-gates.test.js  flat-bet-optimization.test.js  kbo-official-stats.test.js  kbo-pitcher.test.js  live-discipline.test.js  mlb-expected-runs-model.test.js  mlb-historical-baseline.test.js  (+13 more)
collector/: README.md  pyproject.toml
collector/sofascore_collector/: __init__.py  browser.py  cli.py  parser.py  storage.py
collector/tests/: test_collector.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: ensure-setup.mjs
(+137 files in other folders)
