[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baseball-analytics-collector"
version = "0.1.0"
description = "Auditable external MLB data collector"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
browser = ["selenium>=4.20"]
analysis = ["pandas>=2.2", "beautifulsoup4>=4.12"]
test = ["pytest>=8.0"]

[project.scripts]
baseball-collector = "sofascore_collector.cli:main"

[tool.setuptools.packages.find]
include = ["sofascore_collector*"]
